--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+.main-title{
+    height: 300px;
+    background-color: #333;
+}
+.title-text{
+    color: white;
+    padding-top: 150px;
+    padding-left: 50px;
+    margin: 0;
+}
 .title{
     text-align: center;
     background-color: lightgreen;
