--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ li a:hover:not(.active) {
     color: white;
     height: fit-content;
     width: 200px;
-    padding-right: 25px;
+    padding-right: 20px;
     padding-top: 25px;
     padding-bottom: 20px;
     border: inline-block;
@@ -78,12 +78,48 @@ li a:hover:not(.active) {
     font-size: 20px;
 }
 .index-image{
-    width: 300px;
+    width: 350px;
     height: 250px;
     padding-top: 25px;
     padding-left: 25px;
     padding-bottom: 25px;
     border-radius: 50px;
     margin-left: left;
+}
+.legal-rights{
+    margin-left: 60px;
+    background-color: black;
+    margin-top: 25px;
+    border-radius: 30px;
+    color: white;
+    overflow: hidden;
+    width: 90%;
+}
+.ycja-rights{
+    height: fit-content;
+    width: 40%;
+    padding: 15px;
+    padding-left: 25px;
+    border: inline-block;
+    font-size: 20px;
+    float: left;
+}
+.ycja-info-image{
+    height: 250px;
+    width: 400px;
+    padding: 15px;
+    padding-left: 25px;
+    border: inline-block;
+    float: left;
+    border-radius: 50px;
+}
+.adult-rights{
+    height: fit-content;
+    width: 40%;
+    padding: 15px;
+    padding-left: 25px;
+    border: inline-block;
+    font-size: 20px;
+    float: right;
 }
 
