--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,8 @@ li a:hover:not(.active) {
     color: white;
     overflow: hidden;
     width: 90%;
+    text-align: center;
+    font-size: 22px;
 }
 .ycja-rights{
     height: fit-content;
@@ -121,5 +123,49 @@ li a:hover:not(.active) {
     border: inline-block;
     font-size: 20px;
     float: right;
+}
+.process{
+    margin-top: 50px;
+    text-align: center;
+}
+.sentence-text{
+    color: white;
+    padding-top: 100px;
+    text-align: center;
+    margin: 0;
+}
+.p-image{
+    width: 100%;
+    height: auto;
+    border-radius: 50px;
+}
+.process-s{
+    font-size: 25px;
+    text-align:center;
+}
+.grey{
+    padding: center;
+    font-size: 25px;
+    background-color: black;
+    color: white;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 50px;
+}
+.green{
+    margin-left: 250px;
+    margin-right: 250px;
+    font-size: 25px;
+    background-color: green;
+    color: white;
+    border-radius: 25px;
+}
+.red{
+    margin-left: 250px;
+    font-size: 25px;
+    background-color: darkred;
+    color: white;
+    border-radius: 25px;
+    margin-right: 250px;
 }
 
