--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html{
+    background-color: #eefcfc;
+}
 .main-title{
     height: 300px;
     background-color: black;
@@ -190,6 +193,41 @@ li a:hover:not(.active) {
     margin-right: 250px;
 }
 .goals{
+    background-color: black;
+    border-radius: 25px;
+}
+.goal-title{
+    border:inline-block;
     text-align: center;
+    float: left;
+    color: white;
+    background-color: black;
+    width: 50%;
+    height: 100%;
+    padding: 25px;
+}
+.goal-p{
+    color: white;
+    
+    padding: 25px;
+    font-size: 20px;
+}
+.goal-img{
+    float: right;
+    width: 40%;
+    height: auto;
+    padding: 25px;
+}
+.end{
+    background-color: black;
+    color: white;
+    margin-top: 50px;
+    height: 100px;
+    text-align: center;
+}
+.end-t{
+    padding-top: 40px;
+    color: white;
+    font-size: 12px;
 }
 
